--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "venera-app",
+  "name": "venus-app",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
@@ -31,7 +31,6 @@
     "@react-navigation/native-stack": "^7.3.2",
     "@react-navigation/stack": "^7.1.1",
     "@shopify/flash-list": "2.0.2",
-    "@shopify/react-native-skia": "2.2.12",
     "@supabase/supabase-js": "^2.81.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -96,8 +95,6 @@
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "~1.11.0",
-    "react-native-ios-context-menu": "3.1.0",
-    "react-native-ios-utilities": "5.1.2",
     "react-native-keyboard-controller": "1.18.5",
     "react-native-maps": "1.20.1",
     "react-native-markdown-display": "^7.0.2",
@@ -108,7 +105,6 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-view-shot": "~4.0.3",
-    "react-native-vision-camera": "^4.6.4",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "tailwind-merge": "^3.2.0",
