--- a/package.json
+++ b/package.json
@@ -95,6 +95,8 @@
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "~1.11.0",
+    "react-native-ios-context-menu": "^3.2.1",
+    "react-native-ios-utilities": "^5.2.0",
     "react-native-keyboard-controller": "1.18.5",
     "react-native-maps": "1.20.1",
     "react-native-markdown-display": "^7.0.2",
